--- a/config/final.yml
+++ b/config/final.yml
@@ -2,6 +2,8 @@
 blobstore:
   provider: s3
   options:
-    bucket_name: smarsh-bosh-releases
+    bucket_name: minio-bosh-blobs
+    host: pivotal.minio.io
+    port: 9000
 
 final_name: minio
